--- a/Desktop/P3/css/style.scss
+++ b/Desktop/P3/css/style.scss
@@ -107,7 +107,7 @@ body
     width: 50%;
     margin-top: 15px;
     margin-bottom: 35px;
-    background-color: #dd30ac;
+    background: linear-gradient(170deg, rgba(221,48,196,1) 19%, rgba(147,86,220,1) 73%); 
     color: white;
     font-size: 16px;
     max-width: 280px;
