coeur_btnnouveau_integrationscss_Accueil

--- a/Desktop/P3/css/style.css
+++ b/Desktop/P3/css/style.css
@@ -286,6 +286,10 @@ footer {
   font-size: 17px;
 }
 
+.contenufooter img {
+  width: 50%;
+}
+
 .contenufooter {
   padding-top: 10px;
   margin-left: 5%;
