--- a/Desktop/P3/css/style.scss
+++ b/Desktop/P3/css/style.scss
@@ -298,6 +298,11 @@ footer
     font-size: 17px;  
 }
 
+.contenufooter img 
+    {
+        width: 50%;
+    }
+
 .contenufooter
 {
     padding-top: 10px;
