--- a/Desktop/P3/css/style.scss
+++ b/Desktop/P3/css/style.scss
@@ -102,6 +102,7 @@ body
     font-size: inherit;
     text-align: center;
     max-width: 372px;
+    margin-top: -12px;
 }
 
 .presentaion button
@@ -270,6 +271,11 @@ body
     margin-top: -8px;
     font-size: 19px;
 }  
+
+.etoile
+{
+    margin-top: 4px;
+}
 
 .et1 i 
 {
