--- a/Desktop/P3/css/style.css
+++ b/Desktop/P3/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .logo img {
-  width: 50%;
+  width: 45%;
   margin-left: 25%;
   margin-right: 25%;
   margin-top: 5px;
@@ -115,10 +115,15 @@ body {
   width: 50%;
   margin-top: 15px;
   margin-bottom: 35px;
-  background: linear-gradient(170deg, #dd30c4 19%, #9356dc 73%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#ff79da), to(#9356dc));
+  background: linear-gradient(180deg, #ff79da 0%, #9356dc 100%);
   color: white;
   font-size: 16px;
   max-width: 280px;
+}
+
+.presentaion button:hover {
+  background-color: black;
 }
 
 .partie2 h4 {
@@ -207,9 +212,15 @@ body {
   background-color: white;
   width: 95%;
   margin-bottom: 23px;
-  -webkit-box-shadow: 0px 0px 8px #cdcdcd;
-          box-shadow: 0px 0px 8px #cdcdcd;
+  -webkit-box-shadow: 0px 0px 8px 5px #cdcdcd;
+          box-shadow: 0px 0px 8px 5px #cdcdcd;
   border-radius: 15px;
+  cursor: pointer;
+}
+
+.contenup1:hover {
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
 }
 
 .contenup1 button {
@@ -286,13 +297,13 @@ body {
   cursor: pointer;
 }
 
+.et2:hover .et1 i {
+  color: white;
+}
+
 footer {
   background-color: #2f2e2e;
   font-size: 17px;
-}
-
-.contenufooter img {
-  width: 50%;
 }
 
 .contenufooter {
@@ -305,6 +316,16 @@ footer {
 .contenufooter h4 {
   font-family: 'Shrikhand';
   font-size: 23px;
+}
+
+.titrefooter {
+  font-family: 'Shrikhand', cursive;
+  color: white;
+  font-size: 20px;
+}
+
+.titrefooter a {
+  text-decoration: none;
 }
 
 .f1 {
@@ -320,6 +341,11 @@ footer {
 .mention p {
   margin-top: -3px;
   margin-bottom: -6px;
+}
+
+.contact a {
+  text-decoration: none;
+  color: white;
 }
 
 footer i {
@@ -338,6 +364,9 @@ footer i {
 }
 
 @media all and (min-width: 700px) {
+  .logo img {
+    width: 33%;
+  }
   .contenup1 button {
     margin-left: 29%;
   }
@@ -374,6 +403,9 @@ footer i {
 }
 
 @media all and (min-width: 870px) {
+  .logo img {
+    width: 27%;
+  }
   .partie2 h4 {
     margin-left: 2%;
     font-size: 21px;
@@ -398,7 +430,8 @@ footer i {
 
 @media all and (min-width: 1000px) {
   .logo img {
-    width: 45%;
+    width: 23%;
+    height: 43px;
   }
   .partie2 {
     display: -webkit-box;
@@ -450,18 +483,21 @@ footer i {
     font-size: 23px;
   }
   .f1 {
-    margin-top: 0px;
+    margin-top: 9px;
     margin-right: 30px;
     margin-left: 30px;
   }
   .f2 {
-    margin-top: 0px;
+    margin-top: 9px;
     margin-right: 30px;
     margin-left: 30px;
   }
   .mention p {
-    margin-top: 17px;
+    margin-top: 27px;
     margin-right: 30px;
+  }
+  .contact {
+    margin-top: 27px;
   }
 }
 /*# sourceMappingURL=style.css.map */
