--- a/Desktop/P3/css/cssresto1.css
+++ b/Desktop/P3/css/cssresto1.css
@@ -21,16 +21,15 @@ header {
 }
 
 header a {
-  width: 20%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  padding-top: 9px;
+  text-decoration: none;
   color: black;
   font-size: 13px;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 35px;
+  top: 1%;
+  font-size: 20px;
 }
 
 .logo {
