--- a/Desktop/P3/css/cssresto1.scss
+++ b/Desktop/P3/css/cssresto1.scss
@@ -27,18 +27,21 @@ header
 
 header a
 {
-    width: 20%;
-    display: flex;
-    justify-content: flex-end;
-    padding-top: 9px;
+    text-decoration: none;
     color: black;
     font-size: 13px;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    left: 35px;
+    top: 1%;
+    font-size: 20px;
 }
 
 .logo
 {
     font-size: 25px;
-    display: flex;
+    display: flex;8
     justify-content: center;
 }
 .logo img
