--- a/Desktop/P3/css/style.css
+++ b/Desktop/P3/css/style.css
@@ -1,13 +1,3 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-}
-
-@font-face {
-  font-family: "Shrikhand";
-  src: url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-}
-
 #all {
   background-color: red;
 }
@@ -19,20 +9,23 @@ body {
 }
 
 .logo {
-  font-size: 25px;
+  font-size: 39px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  font-family: 'Shrikhand', cursive;
+  height: 80px;
 }
 
-.logo img {
-  width: 45%;
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 5px;
+.logo a {
+  text-decoration: none;
+  height: 46px;
+  width: 177px;
+  padding-top: 20px;
+  color: black;
 }
 
 .lignerecherche {
@@ -111,7 +104,7 @@ body {
   margin-right: 25%;
   text-align: center;
   height: 45px;
-  border-radius: 15px;
+  border-radius: 25px;
   width: 50%;
   margin-top: 15px;
   margin-bottom: 35px;
@@ -123,7 +116,10 @@ body {
 }
 
 .presentaion button:hover {
-  background-color: black;
+  -webkit-transition: .3s;
+  transition: .3s;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
 }
 
 .partie2 h4 {
@@ -218,11 +214,6 @@ body {
   cursor: pointer;
 }
 
-.contenup1:hover {
-  -webkit-transform: scale(1.03);
-          transform: scale(1.03);
-}
-
 .contenup1 button {
   position: absolute;
   margin-top: -179px;
@@ -298,7 +289,7 @@ body {
 }
 
 .et2:hover .et1 i {
-  color: white;
+  display: none;
 }
 
 footer {
@@ -314,7 +305,7 @@ footer {
 }
 
 .contenufooter h4 {
-  font-family: 'Shrikhand';
+  font-family: 'Shrikhand', cursive;
   font-size: 23px;
 }
 
@@ -343,6 +334,10 @@ footer {
   margin-bottom: -6px;
 }
 
+.contact {
+  margin-top: 15px;
+}
+
 .contact a {
   text-decoration: none;
   color: white;
@@ -364,9 +359,6 @@ footer i {
 }
 
 @media all and (min-width: 700px) {
-  .logo img {
-    width: 33%;
-  }
   .contenup1 button {
     margin-left: 29%;
   }
@@ -403,9 +395,6 @@ footer i {
 }
 
 @media all and (min-width: 870px) {
-  .logo img {
-    width: 27%;
-  }
   .partie2 h4 {
     margin-left: 2%;
     font-size: 21px;
@@ -429,10 +418,6 @@ footer i {
 }
 
 @media all and (min-width: 1000px) {
-  .logo img {
-    width: 23%;
-    height: 43px;
-  }
   .partie2 {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -469,12 +454,15 @@ footer i {
   }
   .contenufooter {
     padding-top: 10px;
-    margin-left: 5%;
+    margin-left: 0%;
     color: white;
     padding-bottom: 20px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .contenufooter img {
     width: 20%;
