--- a/Desktop/P3/css/cssresto1.css
+++ b/Desktop/P3/css/cssresto1.css
@@ -14,13 +14,7 @@ body {
   min-width: 300px;
 }
 
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-header a {
+header i {
   text-decoration: none;
   color: black;
   font-size: 13px;
@@ -28,25 +22,28 @@ header a {
   height: 50px;
   position: absolute;
   left: 35px;
-  top: 1%;
+  top: 4%;
   font-size: 20px;
 }
 
 .logo {
-  font-size: 25px;
+  font-size: 39px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  font-family: 'Shrikhand', cursive;
+  height: 80px;
 }
 
-.logo img {
-  width: 45%;
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 5px;
+.logo a {
+  text-decoration: none;
+  height: 46px;
+  width: 177px;
+  padding-top: 20px;
+  color: black;
 }
 
 .imagemenu img {
