--- a/Desktop/P3/css/cssresto1.scss
+++ b/Desktop/P3/css/cssresto1.scss
@@ -268,6 +268,7 @@ header i
 {
     display: flex;
 }
+
 .detail
 {
     width: 100%;
@@ -277,6 +278,7 @@ header i
     justify-content: space-between;
     align-items: center;
 }
+
 .menu
 {
     margin-top: 30px;
@@ -377,7 +379,7 @@ header i
     margin-right: 25%;
     text-align: center;
     height: 45px;
-    border-radius: 15px;
+    border-radius: 25px;
     width: 50%;
     margin-top: 15px;
     margin-bottom: 35px;
@@ -385,6 +387,10 @@ header i
     color: white;
     font-size: 16px;
     max-width: 280px;
+    border-top-color: #ff79da;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: #cca7f9;
 }
 
 .partie3 button:hover
