--- a/Desktop/P3/css/style.scss
+++ b/Desktop/P3/css/style.scss
@@ -396,29 +396,33 @@ body
 
 .et1 i 
 {
-    display: flex;
+    
     color: black;
     margin-top: 7px;
     font-size: 28px;
 } 
 
-.et2
+.et1 i:hover
 {
-  color: transparent;
-  margin-top: -30.5px;
-  font-size: 29px;
+    color: transparent;
 }
 
-.et2:hover
+.et2
 {
-   
-        color: #9356DC; 
-        cursor: pointer;            
- 
+    color: transparent;
+    margin-top: -32.5px;
+    font-size: 31px;
+    margin-left: -1.4px;
 }
 
 .et2:hover .et1 i{
     display: none;
+}
+
+.et2:hover
+{
+    color: #9356DC; 
+    cursor: pointer;            
 }
 
 footer
