menu_palette_du_gout

--- a/Desktop/P3/css/style.css
+++ b/Desktop/P3/css/style.css
@@ -328,6 +328,11 @@ body {
   cursor: pointer;
 }
 
+.contenup1 a {
+  text-decoration: none;
+  color: black;
+}
+
 .contenup1 button {
   position: absolute;
   margin-top: -179px;
