--- a/Desktop/P3/css/style.scss
+++ b/Desktop/P3/css/style.scss
@@ -332,9 +332,10 @@ body
    cursor: pointer;
 }
 
-.contenup1:hover
+.contenup1 a
 {
-    
+    text-decoration: none;
+    color: black; 
 }
 
 .contenup1 button
