--- a/Desktop/P3/css/cssresto1.css
+++ b/Desktop/P3/css/cssresto1.css
@@ -11,7 +11,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
-  min-width: 300px;
+  min-width: 370px;
 }
 
 header i {
@@ -125,7 +125,7 @@ header i {
   position: absolute;
   z-index: 20;
   left: 5%;
-  bottom: 399px;
+  bottom: 382px;
 }
 
 @-webkit-keyframes opacity {
@@ -286,7 +286,7 @@ header i {
 }
 
 .menu b {
-  font-size: 19px;
+  font-size: 17px;
 }
 
 .menu p {
@@ -543,6 +543,12 @@ footer i {
 @media all and (min-width: 860px) {
   .logo img {
     width: 27%;
+  }
+}
+
+@media all and (max-width: 420px) {
+  .menu h4 {
+    max-width: 210px;
   }
 }
 
