--- a/Desktop/P3/css/style.css
+++ b/Desktop/P3/css/style.css
@@ -128,6 +128,7 @@ body {
           justify-content: center;
   font-family: 'Shrikhand', cursive;
   height: 80px;
+  margin-left: -10px;
 }
 
 .logo a {
